tests/snapshots/assert_runtime_true.snap
---
source: tests/snapshot.rs
expression: rust
---
#![feature(c_variadic)]
#![allow(dead_code, unused, non_camel_case_types, non_snake_case, non_upper_case_globals, arithmetic_overflow, suspicious_runtime_symbol_definitions, unpredictable_function_pointer_comparisons, unused_comparisons)]

unsafe extern "C" {
    fn printf(_0: *const i8, ...) -> i32;
    fn __assert_fail(_0: *const i8, _1: *const i8, _2: i32, _3: *const i8) -> !;
}

fn main() {
    let mut __slate_argv_storage: Vec<std::ffi::CString> = std::env::args().map(|arg| std::ffi::CString::new(arg).unwrap()).collect();
    let mut __slate_argv_ptrs: Vec<*mut i8> = __slate_argv_storage.iter().map(|arg| arg.as_ptr() as *mut i8).collect();
    __slate_argv_ptrs.push(std::ptr::null_mut());
    let arg0: i32 = __slate_argv_storage.len() as i32;
    let arg1: *mut *mut i8 = __slate_argv_ptrs.as_mut_ptr();
    let mut argc: i32 = 0;
    let mut argv: *mut *mut i8 = std::ptr::null_mut();
    let mut __retval: i32 = 0;
    argc = arg0;
    argv = arg1;
    let _v0: i32 = 0;
    __retval = _v0;
    let _v1: *mut i8 = b"before\n\0".as_ptr() as *mut i8;
    let _v2: i32 = unsafe { printf(_v1 as *const i8) };
    let _v3: i32 = argc;
    let _v4: i32 = 1;
    let _v5: bool = _v3 == _v4;
    let _v6: bool = if _v5 {
        let _v7: bool = true;
        _v7
    } else {
        let _v8: *mut i8 = b"argc == 1\0".as_ptr() as *mut i8;
        let _v9: *mut i8 = b"/home/takashi/Projects/slate/tests/fixtures/assert_runtime_true.c\0".as_ptr() as *mut i8;
        let _v10: i32 = 6;
        let _v11: *mut i8 = b"main\0".as_ptr() as *mut i8;
        unsafe { __assert_fail(_v8 as *const i8, _v9 as *const i8, _v10 as i32, _v11 as *const i8) };
        let _v12: i32 = 0;
        let _v13: bool = _v12 != 0;
        _v13
    };
    let _v14: *mut i8 = b"after\n\0".as_ptr() as *mut i8;
    let _v15: i32 = unsafe { printf(_v14 as *const i8) };
    let _v16: i32 = 0;
    __retval = _v16;
    let _v17: i32 = __retval;
    std::process::exit(_v17 as i32);
}
