tests/snapshots/assign_value_in_branch.snap
---
source: tests/snapshot.rs
expression: rust
---
#![feature(c_variadic)]
#![allow(dead_code, unused, non_camel_case_types, non_snake_case, non_upper_case_globals, arithmetic_overflow, suspicious_runtime_symbol_definitions, unpredictable_function_pointer_comparisons, unused_comparisons)]

unsafe extern "C" {
    fn printf(_0: *const i8, ...) -> i32;
}

unsafe fn bump(arg0: *mut u64, arg1: i32) -> u64 {
    let mut p: *mut u64 = std::ptr::null_mut();
    let mut c: i32 = 0;
    let mut __retval: u64 = 0;
    p = arg0;
    c = arg1;
    let _v0: i32 = c;
    let _v1: bool = _v0 != 0;
    let _v2: u64 = if _v1 {
        let _v3: u64 = 2;
        let _v4: *mut u64 = p;
        let _v5: u64 = unsafe { *_v4 };
        let _v6: u64 = _v5 + _v3;
        unsafe {
            *_v4 = _v6;
        }
        _v6
    } else {
        let _v7: u64 = 1;
        let _v8: *mut u64 = p;
        let _v9: u64 = unsafe { *_v8 };
        let _v10: u64 = _v9 + _v7;
        unsafe {
            *_v8 = _v10;
        }
        _v10
    };
    __retval = _v2;
    let _v11: u64 = __retval;
    return _v11;
}

fn main() {
    let mut __retval: i32 = 0;
    let mut x: u64 = 0;
    let mut a: u64 = 0;
    let mut b: u64 = 0;
    let _v0: i32 = 0;
    __retval = _v0;
    let _v1: u64 = 10;
    x = _v1;
    let _v2: i32 = 1;
    let _v3: u64 = unsafe { bump(std::ptr::addr_of_mut!(x), _v2) };
    a = _v3;
    let _v4: i32 = 0;
    let _v5: u64 = unsafe { bump(std::ptr::addr_of_mut!(x), _v4) };
    b = _v5;
    let _v6: *mut i8 = b"%lu %lu %lu\n\0".as_ptr() as *mut i8;
    let _v7: u64 = a;
    let _v8: u64 = b;
    let _v9: u64 = x;
    let _v10: i32 = unsafe { printf(_v6 as *const i8, _v7, _v8, _v9) };
    let _v11: i32 = 0;
    __retval = _v11;
    let _v12: i32 = __retval;
    std::process::exit(_v12 as i32);
}
