tests/snapshots/atomic_explicit_orderings.snap
---
source: tests/snapshot.rs
expression: rust
---
#![feature(c_variadic)]
#![allow(dead_code, unused, non_camel_case_types, non_snake_case, non_upper_case_globals, arithmetic_overflow, suspicious_runtime_symbol_definitions, unpredictable_function_pointer_comparisons, unused_comparisons)]

#[repr(C)]
#[allow(non_camel_case_types)]
#[derive(Clone, Copy, PartialEq, Eq, Debug, Hash)]
enum memory_order {
    memory_order_relaxed = 0,
    memory_order_consume = 1,
    memory_order_acquire = 2,
    memory_order_release = 3,
    memory_order_acq_rel = 4,
    memory_order_seq_cst = 5,
}


unsafe extern "C" {
    fn printf(_0: *const i8, ...) -> i32;
}

fn main() {
    let mut __retval: i32 = 0;
    let mut a: i32 = 0;
    let mut relaxed_load: i32 = 0;
    let mut acquire_load: i32 = 0;
    let mut consume_load: i32 = 0;
    let mut old_add: i32 = 0;
    let mut old_or: i32 = 0;
    let mut old_xchg: i32 = 0;
    let mut expected: i32 = 0;
    let mut ok: i32 = 0;
    let _v0: i32 = 0;
    __retval = _v0;
    let _v1: i32 = 0;
    a = _v1;
    let _v2: i32 = 10;
    unsafe { std::sync::atomic::AtomicI32::from_ptr(std::ptr::addr_of_mut!(a)).store(_v2, std::sync::atomic::Ordering::Relaxed) };
    let _v3: i32 = unsafe { std::sync::atomic::AtomicI32::from_ptr(std::ptr::addr_of_mut!(a)).load(std::sync::atomic::Ordering::Relaxed) };
    relaxed_load = _v3;
    let _v4: i32 = 20;
    unsafe { std::sync::atomic::AtomicI32::from_ptr(std::ptr::addr_of_mut!(a)).store(_v4, std::sync::atomic::Ordering::Release) };
    let _v5: i32 = unsafe { std::sync::atomic::AtomicI32::from_ptr(std::ptr::addr_of_mut!(a)).load(std::sync::atomic::Ordering::Acquire) };
    acquire_load = _v5;
    let _v6: i32 = 30;
    unsafe { std::sync::atomic::AtomicI32::from_ptr(std::ptr::addr_of_mut!(a)).store(_v6, std::sync::atomic::Ordering::SeqCst) };
    let _v7: i32 = unsafe { std::sync::atomic::AtomicI32::from_ptr(std::ptr::addr_of_mut!(a)).load(std::sync::atomic::Ordering::Acquire) };
    consume_load = _v7;
    let _v8: i32 = 2;
    let _v9: i32 = unsafe { std::sync::atomic::AtomicI32::from_ptr(std::ptr::addr_of_mut!(a)).fetch_add(_v8, std::sync::atomic::Ordering::AcqRel) };
    old_add = _v9;
    let _v10: i32 = 1;
    let _v11: i32 = unsafe { std::sync::atomic::AtomicI32::from_ptr(std::ptr::addr_of_mut!(a)).fetch_or(_v10, std::sync::atomic::Ordering::Relaxed) };
    old_or = _v11;
    let _v12: i32 = 5;
    let _v13: i32 = unsafe { std::sync::atomic::AtomicI32::from_ptr(std::ptr::addr_of_mut!(a)).swap(_v12, std::sync::atomic::Ordering::Acquire) };
    old_xchg = _v13;
    let _v14: i32 = 5;
    expected = _v14;
    let _v15: i32 = 8;
    let _v16: i32 = expected;
    let _v17: Result<i32, i32> = unsafe { std::sync::atomic::AtomicI32::from_ptr(std::ptr::addr_of_mut!(a)).compare_exchange(_v16, _v15, std::sync::atomic::Ordering::AcqRel, std::sync::atomic::Ordering::Acquire) };
    let _v18: i32 = match _v17 { Ok(v) => v, Err(v) => v };
    let _v19: bool = _v17.is_ok();
    let _v20: bool = !_v19;
    if _v20 {
        expected = _v18;
    }
    let _v21: i32 = _v19 as i32;
    ok = _v21;
    std::sync::atomic::fence(std::sync::atomic::Ordering::Release);
    std::sync::atomic::fence(std::sync::atomic::Ordering::Acquire);
    let _v22: *mut i8 = b"%d %d %d %d %d %d %d %d %d\n\0".as_ptr() as *mut i8;
    let _v23: i32 = relaxed_load;
    let _v24: i32 = acquire_load;
    let _v25: i32 = consume_load;
    let _v26: i32 = old_add;
    let _v27: i32 = old_or;
    let _v28: i32 = old_xchg;
    let _v29: i32 = ok;
    let _v30: i32 = expected;
    let _v31: i32 = unsafe { std::sync::atomic::AtomicI32::from_ptr(std::ptr::addr_of_mut!(a)).load(std::sync::atomic::Ordering::SeqCst) };
    let _v32: i32 = unsafe { printf(_v22 as *const i8, _v23, _v24, _v25, _v26, _v27, _v28, _v29, _v30, _v31) };
    let _v33: i32 = 0;
    __retval = _v33;
    let _v34: i32 = __retval;
    std::process::exit(_v34 as i32);
}
