tests/snapshots/atomics.snap
---
source: tests/snapshot.rs
expression: rust
---
#![feature(c_variadic)]
#![allow(dead_code, unused, non_camel_case_types, non_snake_case, non_upper_case_globals, arithmetic_overflow, suspicious_runtime_symbol_definitions, unpredictable_function_pointer_comparisons, unused_comparisons)]

#[repr(C)]
#[allow(non_camel_case_types)]
#[derive(Clone, Copy, PartialEq, Eq, Debug, Hash)]
enum memory_order {
    memory_order_relaxed = 0,
    memory_order_consume = 1,
    memory_order_acquire = 2,
    memory_order_release = 3,
    memory_order_acq_rel = 4,
    memory_order_seq_cst = 5,
}


unsafe extern "C" {
    fn printf(_0: *const i8, ...) -> i32;
}

/// returns 100, a = 105
/// returns 105, a = 95
/// 95
/// &
/// 60 = 28
/// 28 | 1 = 29
/// 29 ^ 15 = 18
/// returns 18, a = 7
/// success, a = 42
fn main() {
    let mut __retval: i32 = 0;
    let mut a: i32 = 0;
    let mut loaded: i32 = 0;
    let mut fa: i32 = 0;
    let mut fs: i32 = 0;
    let mut fand: i32 = 0;
    let mut forr: i32 = 0;
    let mut fxor: i32 = 0;
    let mut xchg_old: i32 = 0;
    let mut expected: i32 = 0;
    let mut ok: i32 = 0;
    let mut expected2: i32 = 0;
    let mut bad: i32 = 0;
    let _v0: i32 = 0;
    __retval = _v0;
    let _v1: i32 = 0;
    a = _v1;
    let _v2: i32 = 100;
    unsafe { std::sync::atomic::AtomicI32::from_ptr(std::ptr::addr_of_mut!(a)).store(_v2, std::sync::atomic::Ordering::SeqCst) };
    let _v3: i32 = unsafe { std::sync::atomic::AtomicI32::from_ptr(std::ptr::addr_of_mut!(a)).load(std::sync::atomic::Ordering::SeqCst) };
    loaded = _v3;
    let _v4: i32 = 5;
    let _v5: i32 = unsafe { std::sync::atomic::AtomicI32::from_ptr(std::ptr::addr_of_mut!(a)).fetch_add(_v4, std::sync::atomic::Ordering::SeqCst) };
    fa = _v5;
    let _v6: i32 = 10;
    let _v7: i32 = unsafe { std::sync::atomic::AtomicI32::from_ptr(std::ptr::addr_of_mut!(a)).fetch_sub(_v6, std::sync::atomic::Ordering::SeqCst) };
    fs = _v7;
    let _v8: i32 = 60;
    let _v9: i32 = unsafe { std::sync::atomic::AtomicI32::from_ptr(std::ptr::addr_of_mut!(a)).fetch_and(_v8, std::sync::atomic::Ordering::SeqCst) };
    fand = _v9;
    let _v10: i32 = 1;
    let _v11: i32 = unsafe { std::sync::atomic::AtomicI32::from_ptr(std::ptr::addr_of_mut!(a)).fetch_or(_v10, std::sync::atomic::Ordering::SeqCst) };
    forr = _v11;
    let _v12: i32 = 15;
    let _v13: i32 = unsafe { std::sync::atomic::AtomicI32::from_ptr(std::ptr::addr_of_mut!(a)).fetch_xor(_v12, std::sync::atomic::Ordering::SeqCst) };
    fxor = _v13;
    let _v14: i32 = 7;
    let _v15: i32 = unsafe { std::sync::atomic::AtomicI32::from_ptr(std::ptr::addr_of_mut!(a)).swap(_v14, std::sync::atomic::Ordering::SeqCst) };
    xchg_old = _v15;
    let _v16: i32 = 7;
    expected = _v16;
    let _v17: i32 = 42;
    let _v18: i32 = expected;
    let _v19: Result<i32, i32> = unsafe { std::sync::atomic::AtomicI32::from_ptr(std::ptr::addr_of_mut!(a)).compare_exchange(_v18, _v17, std::sync::atomic::Ordering::SeqCst, std::sync::atomic::Ordering::SeqCst) };
    let _v20: i32 = match _v19 { Ok(v) => v, Err(v) => v };
    let _v21: bool = _v19.is_ok();
    let _v22: bool = !_v21;
    if _v22 {
        expected = _v20;
    }
    let _v23: i32 = _v21 as i32;
    ok = _v23;
    let _v24: i32 = 999;
    expected2 = _v24;
    let _v25: i32 = 0;
    let _v26: i32 = expected2;
    let _v27: Result<i32, i32> = unsafe { std::sync::atomic::AtomicI32::from_ptr(std::ptr::addr_of_mut!(a)).compare_exchange(_v26, _v25, std::sync::atomic::Ordering::SeqCst, std::sync::atomic::Ordering::SeqCst) };
    let _v28: i32 = match _v27 { Ok(v) => v, Err(v) => v };
    let _v29: bool = _v27.is_ok();
    let _v30: bool = !_v29;
    if _v30 {
        expected2 = _v28;
    }
    let _v31: i32 = _v29 as i32;
    bad = _v31;
    std::sync::atomic::fence(std::sync::atomic::Ordering::SeqCst);
    let _v32: *mut i8 = b"%d %d %d %d %d %d %d %d %d %d %d %d\n\0".as_ptr() as *mut i8;
    let _v33: i32 = loaded;
    let _v34: i32 = fa;
    let _v35: i32 = fs;
    let _v36: i32 = fand;
    let _v37: i32 = forr;
    let _v38: i32 = fxor;
    let _v39: i32 = xchg_old;
    let _v40: i32 = ok;
    let _v41: i32 = expected;
    let _v42: i32 = bad;
    let _v43: i32 = expected2;
    let _v44: i32 = unsafe { std::sync::atomic::AtomicI32::from_ptr(std::ptr::addr_of_mut!(a)).load(std::sync::atomic::Ordering::SeqCst) };
    let _v45: i32 = unsafe { printf(_v32 as *const i8, _v33, _v34, _v35, _v36, _v37, _v38, _v39, _v40, _v41, _v42, _v43, _v44) };
    let _v46: i32 = 0;
    __retval = _v46;
    let _v47: i32 = __retval;
    std::process::exit(_v47 as i32);
}
