tests/snapshots/attribute_cold_inline.snap
---
source: tests/snapshot.rs
expression: rust
---
#![feature(c_variadic)]
#![allow(dead_code, unused, non_camel_case_types, non_snake_case, non_upper_case_globals, arithmetic_overflow, suspicious_runtime_symbol_definitions, unpredictable_function_pointer_comparisons, unused_comparisons)]

unsafe extern "C" {
    fn printf(_0: *const i8, ...) -> i32;
}

#[cold]
fn cold_path(arg2: i32) -> i32 {
    let mut x: i32 = 0;
    let mut __retval: i32 = 0;
    x = arg2;
    let _v0: i32 = x;
    let _v1: i32 = 2;
    let _v2: i32 = _v0 * _v1;
    __retval = _v2;
    let _v3: i32 = __retval;
    return _v3;
}

#[inline(always)]
fn always_inlined(arg1: i32) -> i32 {
    let mut x: i32 = 0;
    let mut __retval: i32 = 0;
    x = arg1;
    let _v0: i32 = x;
    let _v1: i32 = 1;
    let _v2: i32 = _v0 + _v1;
    __retval = _v2;
    let _v3: i32 = __retval;
    return _v3;
}

#[inline(never)]
fn never_inlined(arg0: i32) -> i32 {
    let mut x: i32 = 0;
    let mut __retval: i32 = 0;
    x = arg0;
    let _v0: i32 = x;
    let _v1: i32 = 1;
    let _v2: i32 = _v0 - _v1;
    __retval = _v2;
    let _v3: i32 = __retval;
    return _v3;
}

fn main() {
    let mut __retval: i32 = 0;
    let mut a: i32 = 0;
    let mut b: i32 = 0;
    let mut c: i32 = 0;
    let _v0: i32 = 0;
    __retval = _v0;
    let _v1: i32 = 3;
    let _v2: i32 = cold_path(_v1);
    a = _v2;
    let _v3: i32 = a;
    let _v4: i32 = always_inlined(_v3);
    b = _v4;
    let _v5: i32 = b;
    let _v6: i32 = never_inlined(_v5);
    c = _v6;
    let _v7: *mut i8 = b"%d %d %d\n\0".as_ptr() as *mut i8;
    let _v8: i32 = a;
    let _v9: i32 = b;
    let _v10: i32 = c;
    let _v11: i32 = unsafe { printf(_v7 as *const i8, _v8, _v9, _v10) };
    let _v12: i32 = 0;
    __retval = _v12;
    let _v13: i32 = __retval;
    std::process::exit(_v13 as i32);
}
