tests/snapshots/bitnot.snap
---
source: tests/snapshot.rs
expression: rust
---
#![feature(c_variadic)]
#![allow(dead_code, unused, non_camel_case_types, non_snake_case, non_upper_case_globals, arithmetic_overflow, suspicious_runtime_symbol_definitions, unpredictable_function_pointer_comparisons, unused_comparisons)]

unsafe extern "C" {
    fn printf(_0: *const i8, ...) -> i32;
}

fn inot(arg0: i32) -> i32 {
    let mut a: i32 = 0;
    let mut __retval: i32 = 0;
    a = arg0;
    let _v0: i32 = a;
    let _v1: i32 = !_v0;
    __retval = _v1;
    let _v2: i32 = __retval;
    return _v2;
}

fn main() {
    let mut __retval: i32 = 0;
    let mut u: u32 = 0;
    let _v0: i32 = 0;
    __retval = _v0;
    let _v1: *mut i8 = b"%d\n\0".as_ptr() as *mut i8;
    let _v2: i32 = 0;
    let _v3: i32 = inot(_v2);
    let _v4: i32 = unsafe { printf(_v1 as *const i8, _v3) };
    let _v5: *mut i8 = b"%d\n\0".as_ptr() as *mut i8;
    let _v6: i32 = 12;
    let _v7: i32 = inot(_v6);
    let _v8: i32 = unsafe { printf(_v5 as *const i8, _v7) };
    let _v9: *mut i8 = b"%d\n\0".as_ptr() as *mut i8;
    let _v10: i32 = -1;
    let _v11: i32 = inot(_v10);
    let _v12: i32 = unsafe { printf(_v9 as *const i8, _v11) };
    let _v13: u32 = 240;
    u = _v13;
    let _v14: *mut i8 = b"%u\n\0".as_ptr() as *mut i8;
    let _v15: u32 = u;
    let _v16: u32 = !_v15;
    let _v17: i32 = unsafe { printf(_v14 as *const i8, _v16) };
    let _v18: i32 = 0;
    __retval = _v18;
    let _v19: i32 = __retval;
    std::process::exit(_v19 as i32);
}
