tests/snapshots/bool.snap
---
source: tests/snapshot.rs
expression: rust
---
#![feature(c_variadic)]
#![allow(dead_code, unused, non_camel_case_types, non_snake_case, non_upper_case_globals, arithmetic_overflow, suspicious_runtime_symbol_definitions, unpredictable_function_pointer_comparisons, unused_comparisons)]

unsafe extern "C" {
    fn printf(_0: *const i8, ...) -> i32;
}

fn from_int(arg3: i32) -> bool {
    let mut x: i32 = 0;
    let mut __retval: bool = false;
    let mut b: bool = false;
    x = arg3;
    let _v0: i32 = x;
    let _v1: bool = _v0 != 0;
    b = _v1;
    let _v2: bool = b;
    __retval = _v2;
    let _v3: bool = __retval;
    return _v3;
}

fn from_compare(arg1: i32, arg2: i32) -> bool {
    let mut x: i32 = 0;
    let mut y: i32 = 0;
    let mut __retval: bool = false;
    let mut b: bool = false;
    x = arg1;
    y = arg2;
    let _v0: i32 = x;
    let _v1: i32 = y;
    let _v2: bool = _v0 < _v1;
    b = _v2;
    let _v3: bool = b;
    __retval = _v3;
    let _v4: bool = __retval;
    return _v4;
}

fn use_bool(arg0: bool) -> i32 {
    let mut flag: bool = false;
    let mut __retval: i32 = 0;
    flag = arg0;
    let _v0: bool = flag;
    let _v1: i32 = _v0 as i32;
    __retval = _v1;
    let _v2: i32 = __retval;
    return _v2;
}

fn main() {
    let mut __retval: i32 = 0;
    let _v0: i32 = 0;
    __retval = _v0;
    let _v1: *mut i8 = b"%d\n\0".as_ptr() as *mut i8;
    let _v2: i32 = 0;
    let _v3: bool = from_int(_v2);
    let _v4: i32 = _v3 as i32;
    let _v5: i32 = unsafe { printf(_v1 as *const i8, _v4) };
    let _v6: *mut i8 = b"%d\n\0".as_ptr() as *mut i8;
    let _v7: i32 = 42;
    let _v8: bool = from_int(_v7);
    let _v9: i32 = _v8 as i32;
    let _v10: i32 = unsafe { printf(_v6 as *const i8, _v9) };
    let _v11: *mut i8 = b"%d\n\0".as_ptr() as *mut i8;
    let _v12: i32 = 2;
    let _v13: i32 = 5;
    let _v14: bool = from_compare(_v12, _v13);
    let _v15: i32 = _v14 as i32;
    let _v16: i32 = unsafe { printf(_v11 as *const i8, _v15) };
    let _v17: *mut i8 = b"%d\n\0".as_ptr() as *mut i8;
    let _v18: i32 = 9;
    let _v19: i32 = 5;
    let _v20: bool = from_compare(_v18, _v19);
    let _v21: i32 = _v20 as i32;
    let _v22: i32 = unsafe { printf(_v17 as *const i8, _v21) };
    let _v23: *mut i8 = b"%d\n\0".as_ptr() as *mut i8;
    let _v24: i32 = 2;
    let _v25: bool = _v24 != 0;
    let _v26: i32 = use_bool(_v25);
    let _v27: i32 = unsafe { printf(_v23 as *const i8, _v26) };
    let _v28: *mut i8 = b"%d\n\0".as_ptr() as *mut i8;
    let _v29: i32 = 0;
    let _v30: bool = _v29 != 0;
    let _v31: i32 = use_bool(_v30);
    let _v32: i32 = unsafe { printf(_v28 as *const i8, _v31) };
    let _v33: i32 = 0;
    __retval = _v33;
    let _v34: i32 = __retval;
    std::process::exit(_v34 as i32);
}
